--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                                         </div>
                                         <div class="card-content">
                                             <span class="subtitle mt--10">Izaan-School.</span>
-                                            <h3 class="title">John Jack</h3>
+                                            <h3 class="title">Emtiaz Chowdhury</h3>
                                             <span class="designation">Developer</span>
                                         </div>
                                     </div>
@@ -2277,7 +2277,7 @@
                                                         <a href="#"><img src="assets/images/client/png/brand-01.png" alt="Client-image"></a>
                                                     </div>
                                                     <div class="seperator"></div>
-                                                    <div class="client-name"><span><a href="#">John Due</a></span>
+                                                    <div class="client-name"><span><a href="#">Emtiaz Chowdhury</a></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -2815,7 +2815,7 @@
                                 <img src="assets/images/contact/contact1.png" alt="contact-img">
                             </div>
                             <div class="title-area">
-                                <h4 class="title">John Jack</h4>
+                                <h4 class="title">Emtiaz Chowdhury</h4>
                                 <span>Developer</span>
                             </div>
                             <div class="description">
