--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> -->
-    <title> Mr Portfolio2- Personal Portfolio</title>
+    <title> Emtiaz Chowdhury </title>
  
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
